Attempt to fix layout issues when settings pattern is viewed at narrow widths

--- a/stylesheets/_layout.settings.scss
+++ b/stylesheets/_layout.settings.scss
@@ -49,7 +49,7 @@
             float: right;
             margin-left: $padding-small-horizontal * 2;
             margin-top: 0;
-            max-width: calc(100% - 200px - #{$padding-small-horizontal * 2});
+            max-width: 100%;
             padding-left: $padding-small-horizontal * 2;
             padding-top: 0;
             width: 75%;
